# uri-resolver-extensions

./: .gitignore  README.md  TODO  monowrap.json  monowrap.yaml  package.json  schema.concurrent.graphql  todo  todo.md
.github/workflows/: async-uri-resolver-cd.yaml  async-uri-resolver-ci.yaml  ens-contenthash-uri-resolver-cd.yaml  ens-contenthash-uri-resolver-ci.yaml  ens-ipfs-contenthash-uri-resolver-cd.yaml  ens-ipfs-contenthash-uri-resolver-ci.yaml  ens-ocr-contenthash-uri-resolver-cd.yaml  ens-ocr-contenthash-uri-resolver-ci.yaml  ens-text-record-uri-resolver-cd.yaml  ens-text-record-uri-resolver-ci.yaml  fs-uri-resolver-cd.yaml  fs-uri-resolver-ci.yaml  github-resolver-cd.yaml  github-resolver-ci.yaml  http-uri-resolver-cd.yaml  http-uri-resolver-ci.yaml  ipfs-async-uri-resolver-cd.yaml  ipfs-sync-uri-resolver-cd.yaml  ipfs-sync-uri-resolver-ci.yaml  sync-uri-resolver-cd.yaml  uri-resolver-interface-cd.yaml  uri-resolver-interface-ci.yaml  wrapscan-resolver-cd.yaml  wrapscan-resolver-ci.yaml
implementations/ens-contenthash/: Cargo.toml  URI.txt  deployment.json  jest.config.js  package.json  polywrap.yaml
implementations/ens-ipfs-contenthash/: Cargo.toml  deployment.json  package.json  polywrap.yaml
implementations/ens-ocr-contenthash/: Cargo.toml  deployment.json  package.json  polywrap.yaml
implementations/ens-text-record/: Cargo.toml  deployment.json  package.json  (+2 more)
implementations/ens/ipfs-contenthash/: Cargo.toml  README.md  URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.yaml
implementations/ens/ipfs-contenthash/resources/: README.md
implementations/ens/ipfs-contenthash/src/: lib.rs
implementations/ens/ipfs-contenthash/src/__tests__/e2e/: integration.spec.ts
implementations/ens/ocr-contenthash/: Cargo.toml  README.md  URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
implementations/ens/ocr-contenthash/src/: lib.rs
implementations/ens/ocr-contenthash/src/__tests__/e2e/: integration.spec.ts
implementations/file-system/: Cargo.toml  README.md  URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
implementations/file-system/resources/: README.md
implementations/file-system/src/: lib.rs
implementations/file-system/src/__tests__/: config.ts
implementations/file-system/src/__tests__/e2e/: integration.spec.ts
implementations/http/: Cargo.toml  README.md  URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
implementations/http/resources/: README.md
implementations/http/src/: lib.rs
implementations/http/src/__tests__/e2e/: integration.spec.ts
implementations/http/src/__tests__/test-wrapper/: URI.txt  polywrap.deploy.yaml  polywrap.yaml
implementations/wrap/: .gitignore  Cargo.toml  package.json  polywrap.graphql  polywrap.test.cue  polywrap.test.yaml  polywrap.yaml
implementations/wrap/src/: lib.rs
implementations/wrap/src/ipfs/: mod.rs
interface/: README.md  URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml  schema.graphql
(+189 files in other folders)
