[package]
name = "file-system-uri-resolver"
version = "0.1.0"
description = "A Polywrap Wasm wrapper for filesystem URI resolution"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/uri-resolver-extensions"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.11.0-pre.4" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
