[package]
name = "http-uri-resolver-rs"
version = "0.1.0"
description = "A Polywrap Wasm wrapper for resolving HTTP URIs"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.10.0-pre.7" }
serde = { version = "1.0", features = ["derive"] }
base64 = { version = "0.13.1" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
