[package]
name = "ipfs-ens-contenthash-uri-resolver-rs"
version = "0.1.0"
description = "A Polywrap Wasm wrapper for ENS content hash URI resolution (IPFS content)"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/monorepo"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.11.0-pre.4" }
serde = { version = "1.0", features = ["derive"] }
base58 = "0.2.0"
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
