[package]
name = "ens-ocr-contenthash-uri-resolver"
version = "0.1.0"
description = "A Polywrap Wasm wrapper for ENS content hash URI resolution (IPFS content)"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/uri-resolver-extensions"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.11.0-pre.4" }
serde = { version = "1.0", features = ["derive"] }
ocr_core_rs = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
